--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,9 @@
   },
   "homepage": "https://github.com/Alan0985/expense_tracker#readme",
   "dependencies": {
-    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.10",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
