--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 NODE_ENV=production
 PORT=5000
-MONGO_URI=YourMongoURI
+MONGO_URI=mongodb+srv://admin:0985@mern-0hwwy.mongodb.net/expenseTracker?retryWrites=true&w=majority
